[project]
name = "post_writer"
version = "0.1.0"
description = "post_writer using crewAI"
authors = [{ name = "Your name", email = "Your email@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.159.0,<1.0.0"
]

[project.scripts]
post_writer = "post_writer.main:run"
run_crew = "post_writer.main:run"
train = "post_writer.main:train"
replay = "post_writer.main:replay"
test = "post_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
